refactor dependencies in build.gradle and update JSON array access in TestRunner